Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: __GCC_HAVE_DWARF2_CFI_ASM
TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
TODO: swap_sv not undone in pool

6.37 Tue Mar  4 13:27:33 CET 2014
	- *sigh*, removed leftover dbeugging code from debugging a
          perl bug, of all things.

6.36 Tue Mar  4 07:11:59 CET 2014
	- semaphores would not clear the destroy hook when interrupted
          by ->throw, causing segfaults or worse.
        - ->throw on a thread waiting for a semaphore did not acquire
          the semaphore, but also didn't wake up other waiters,
          possibly causing a deadlock.
	- "FATAL: $Coro::IDLE blocked itself" will now use Carp::confess
          to report a full stacktrace, which should help find out
          where the actual call is.
        - "atomically" destroy data in slf_destroy, because it is
          the right thing to do, just in case.
        - disable ecb.h libm dependency, to compile on ancient systems
          or under adverse conditions.

6.33 Mon Nov 18 11:26:27 CET 2013
	- do not crash when freeing padlists with holes (in 5.18).
	- tentative SVt_BIND 5.19 port/fix.

6.32 Tue Nov  5 15:35:35 CET 2013
	- use a new algorithm to derive padlists for perl 5.18. The old
          one could lead to 0-pointer accesses inside perl (reported
          by Darin McBride).

6.31 Thu May  9 07:39:48 CEST 2013
	- Coro::AIO requests would crash if the thread was ready'd
          while the request was ongoing.

6.29 Wed May  8 02:55:18 CEST 2013
	- when an on_destroy handler destructs the coro currently being
          destructed a perl scalar could be accessed after being freed,
          likely causing a crash.

6.28 Wed Mar  6 06:58:02 CET 2013
	- clean remnants of existing __DIE__ and __WARN__ handlers so
          they lose their magic and will not cause segfaults later
          (testcase by Andrey Sagulin).